Actions
Bug #5516
closedfill_standard_fds uses F_GETFD which is not defined on MinGW (broken build)
Bug #5516:
fill_standard_fds uses F_GETFD which is not defined on MinGW (broken build)
Description
Hello,
New fill_standard_fds broke build under MinGW:
compiling ../../../../ruby/ruby.c
../../../../ruby/ruby.c: In function 'fill_standard_fds':
../../../../ruby/ruby.c:1822:19: error: 'F_GETFD' undeclared (first use in this function)
../../../../ruby/ruby.c:1822:19: note: each undeclared identifier is reported only once for each function it appears in
make: *** [ruby.o] Error 1
Similar to #5470
Updated by akr (Akira Tanaka) almost 15 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r33573.
Luis, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ruby.c (fill_standard_fds): use fstat() instead of fcntl(F_GETFD)
for MinGW. reported by Luis Lavena. [ruby-core:40526] [Bug #5516]
Actions