* ruby.c (fill_standard_fds): use fstat() instead of fcntl(F_GETFD)   for MinGW.  reported by Luis Lavena.  [ruby-core:40526] [Bug #5516]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33573 b2dd03c8-39d4-4d8f-98ff-823fe69b080e